@@ -29,11 +29,11 @@
       <essential/>
       <frozen/>
     </group>
-    <group name="proposed">
+<!--    <group name="proposed">
       <description>Proposed GNOME desktop and developer platform software.</description>
       <essential/>
       <frozen/>
-    </group>
+    </group>-->
   </release>
   <release name="HEAD">
     <group name="fifth-toe">
@@ -3109,7 +3109,7 @@
   </module>
   <module name="tomboy">
     <version release="gnome-2.16">
-      <component name="tomboy" dir="tomboy" group="proposed">
+      <component name="tomboy" dir="tomboy" group="desktop">
         <podir dir="po"/>
         <potname name="tomboy.pot"/>
         <branch name="HEAD"/>
