@@ -1,3 +1,7 @@
+2006-09-03  Danilo Šegan  <danilo@gnome.org>
+
+	* translation-status.xml: Move tomboy from proposed to desktop.
+
 2006-08-23  Danilo Šegan  <danilo@gnome.org>
 
 	* translation-status.xml: Branch g-p-m, glib, gtk+.
